[project]
name = "playto-payout-engine"
version = "0.1.0"
description = "Playto Pay — Payout Engine Backend"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "greenlet>=3.0.3",
    "alembic>=1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "core",
    "db",
    "merchant",
    "ledger",
    "payout",
    "idempotency",
    "workers",
    "utils",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"